compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_type_does_not_allow_size_utf32.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 272
expression: "case <<1>> { <<1:utf32-size(5)>> -> a }"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case <<1>> { <<1:utf32-size(5)>> -> a }
  │                  ^^^^^ Size cannot be specified here

Hint: utf32 segments have an autoatic size.
See: https://gleam.run/book/tour/bit-strings.html

